cambiar la lista para que se vea en forma tarjeta

--- a/src/main/resources/templates/html/encabezado/precios.html
+++ b/src/main/resources/templates/html/encabezado/precios.html
@@ -13,7 +13,7 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 
-                <li> <img src="/imagen/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
+                <li> <img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
                 <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
                 <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
                 <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
