--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -6,6 +6,7 @@
     <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <link href="/css/caja-boostrap.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/src/main/resources/static/css/">
 
 </head>
 <body>
@@ -14,7 +15,7 @@
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><img src="/imagen/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
+                <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
                 <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
                 <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
                 <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
@@ -91,37 +92,42 @@
 <!-- ahora desde aqui empieza la creacion de las figuras -->
 <!-- Hacer con html y css-->
 
-<div class="container-fluid">
-    <div class="card">
-        <h3>Lista de figura</h3>
-        <div class="card-body">
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Descripción</th>
-                    <th>Arco</th>
-                    <th>Precio</th>
-        
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="figura: ${listaFigura}">
-                   <!-- <td><img th:src="${persona.url}" alt="luffie"></td> --> 
-                   <!--<td th:text="${persona.id}">ID</td> --> 
-                    <td th:text="${figura.nombre}">Nombre</td>
-                    <td th:text="${figura.arco?.nombre}">Arco</td>
-                    <td th:text="${figura.des}">Descripción</td>
-                    <td th:text="${figura.precio}">Precio</td>
-                    <td>
-                        <input class="form-check-input" type="checkbox" id="compra">
-                        <label class="form-check-label" for="compra">Compra</label>
-                    </td>
-                   
-                </tr>
-                </tbody>
-            </table>
-
+<div class="container">
+    <div class="card-container">
+        <div class="card">
+            <div class="card-header">
+                <h3>Lista de Figuras</h3>
+            </div>
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Imagen</th>
+                        <th>Nombre</th>
+                        <th>Arco</th>
+                        <th>Descripción</th>
+                        <th>Precio</th>
+                        <th>Compra</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="figura: ${listaFigura}">
+                        <td><img class="img-fluid" th:src="${figura.url}" alt="imagen"></td>
+                        <td th:text="${figura.nombre}">Nombre</td>
+                        <td th:text="${figura.arco?.nombre}">Arco</td>
+                        <td th:text="${figura.des}">Descripción</td>
+                        <td th:text="${figura.precio}">Precio</td>
+                        <td>
+                            <input class="form-check-input" type="checkbox" id="compra">
+                            <label class="form-check-label" for="compra">Compra</label>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
