corregir la base de datos

--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -13,8 +13,8 @@
 
 <body>
 
-    <header class="p-3 bg-dark text-white">
-        <div class="container">
+    <header class="p-3 bg-dark text-white fixed-top " >
+        <div class="container ">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
@@ -80,7 +80,7 @@
     </header>
 
     <!-- Encabezado de enlaces para ver las figuras-->
-    <div class="container mt-4">
+    <div class="container" style="margin-top: 100px;">
         <div class="row justify-content-center">
             <div class="col-lg-3 mb-3">
                 <a href="#" class="btn btn-primary btn-lg btn-block">Novedades</a>
@@ -121,7 +121,7 @@
                         </thead>
                         <tbody>
                             <tr th:each="figura: ${listaFigura}">
-                                <td><img class="img-fluid" th:src="${figura.url}" alt="imagen"></td>
+                                <td><img th:src="${figura.url}" alt="imagen"></td>
                                 <td th:text="${figura.nombre}">Nombre</td>
                                 <td th:text="${figura.arco?.nombre}">Arco</td>
                                 <td th:text="${figura.des}">Descripción</td>
@@ -144,6 +144,51 @@
         </div>
     </div>
 
+
+
+
+    <div class="container">
+        <div class="card-container">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Novedad de la semana</h3>
+                </div>
+                <div class="card-body">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Imagen</th>
+                                <th>Nombre</th>
+                                <th>Arco</th>
+                                <th>Descripción</th>
+                                <th>Precio</th>
+                                <th>Compra</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr  th:each="figura: ${listaFigura}">
+                                <td><img th:src="${listaFigura[2].url}" alt="imagen"></td>
+                                <td th:text="${listaFigura[6].nombre}">Nombre</td>
+                                <td th:text="${listaFigura[6].arco?.nombre}">Arco</td>
+                                <td th:text="${listaFigura[6].des}">Descripción</td>
+                                <td th:text="${listaFigura[6].precio}">Precio</td>
+                                <td >
+                                    <!--<input class="form-check-input" type="checkbox" id="compra">
+                                    
+                                        <label class="form-check-label" for="compra">Compra</label> -->
+                                        <a href="">
+
+                                        <button type="button" class="boton" >Comprar</button>
+                                        </a>
+                                       
+                                    </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     </div>
