--- a/src/main/resources/static/css/tabla.css
+++ b/src/main/resources/static/css/tabla.css
@@ -1,35 +1,9 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
 
-.card-container {
-    display: flex;
-    justify-content: center;
-}
-
-.card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 300px; /* Ancho deseado */
-}
 
 .card-header {
     background-color: #f8f9fa;
-    padding: 16px;
-    text-align: right;
-}
-
-.card-header h3 {
-    margin: 0;
-}
-
-.card-body {
-    padding: 16px;
+    padding: 5px;
+    text-align: center;
 }
 
 .table {
@@ -42,6 +16,85 @@
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid #dee2e6;
+}
+
+/*
+Esto es para ponerle estilo a los botones
+*/
+.btn-comprar {
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    outline: none;
+}
+
+.btn-comprar:hover {
+    background-color: #0056b3;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
+.btn-comprar:active {
+    transform: translateY(0);
+    box-shadow: none;
+}
+
+
+/*
+Pie de pagina 
+*/
+
+
+/* Estilos básicos */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+/* Estilos de la tabla */
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+/* Estilos de los enlaces */
+
+.menu{
+
+    padding: 20px;
+}
+
+.menuTitulo{
+
+
+    background-color: #f8f9fa;
+    padding: 5px;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+a:hover {
+    color: #007bff;
 }
 
 
