--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-    <link href="/css/caja-boostrap.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/src/main/resources/static/css/">
+    <link rel="stylesheet" href="/css/tabla.css">
+   
+   
 
-</head>
 
 <body>
 
     <header class="p-3 bg-dark text-white fixed-top " >
-        <div class="container ">
+        <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
@@ -80,7 +81,7 @@
     </header>
 
     <!-- Encabezado de enlaces para ver las figuras-->
-    <div class="container" style="margin-top: 100px;">
+    <div class="container" style="margin-top: 110px;">
         <div class="row justify-content-center">
             <div class="col-lg-3 mb-3">
                 <a href="#" class="btn btn-primary btn-lg btn-block">Novedades</a>
@@ -132,7 +133,7 @@
                                         <label class="form-check-label" for="compra">Compra</label> -->
                                         <a href="">
 
-                                        <button type="button" class="boton" >Comprar</button>
+                                        <button type="button" class="boton btn-comprar" >Comprar</button>
                                         </a>
                                        
                                     </td>
@@ -145,7 +146,7 @@
     </div>
 
 
-
+    <br>
 
     <div class="container">
         <div class="card-container">
@@ -178,7 +179,7 @@
                                         <label class="form-check-label" for="compra">Compra</label> -->
                                         <a href="">
 
-                                        <button type="button" class="boton" >Comprar</button>
+                                        <button type="button" class="boton btn-comprar" >Comprar</button>
                                         </a>
                                        
                                     </td>
@@ -191,9 +192,90 @@
     </div>
 
 
+    <div class="menu">
+        <div class="menuTitulo">
+            <h2>Menú</h2>
+        </div>
+        
+        <table>
+            <tr>
+                <th>Por que comprar </th>
+                <th>Quienes somos </th>
+                <th>Contactar</th>
+                <th>Otros</th>
+                <th>Comunidad</th>
+            </tr>
+            <tr>
+                <td>
+                 
+                    <a href="#">Cómo comprar</a><br>
+                    <a href="#">Formas de pago</a><br>
+                    <a href="#">Gastos de envío</a><br>
+                    <a href="#">Cupones descuento</a><br>
+                    <a href="#">Preguntas frecuentes</a><br>
+                    <a href="#">Opiniones de clientes</a><br>
+                    <a href="#">Tarjetas regalo</a><br>
+                   
+                </td>
+                <td>
+                    
+                    <a href="#">Compromisos</a><br>
+                    <a href="#">Nuestras tiendas</a><br>
+                    <a href="#">Nuestras Marcas</a><br>
+                    <a href="#">Condiciones de compra</a><br>
+                    <a href="#">Afiliados</a><br>
+                    <a href="#">Aviso legal</a><br>
+                    <a href="#">Privacidad</a>
+                    
+                   
+                </td>
+                <td>
+                    <a href="#">Centro de soporte</a><br>
+                    <a href="#">Devoluciones y Garantías</a><br>
+                    <a href="#">Wiki PcComponentes</a><br>
+                    <a href="#">Opina y Gana</a><br>
+                    <a href="#">Publicidad</a><br>
+                    <a href="#">Trabaja con nosotros</a>
+                    <a href="#">Politicas de cookies</a>
+
+                    
+                </td>
+
+                <td>
+                    <a href="#">Replay </a><br>
+                    <a href="#">Black Friday </a><br>
+                    <a href="#">Cyber Monday  </a><br>
+                    <a href="#">PcDays </a><br>
+                    <a href="#">Marketplace </a><br>
+                    <a href="#">Servicio logistico Fulfilment </a><br>
+                    <a href="#">Servicio de reparaciones </a><br>
+                    <a href="#">Concurso </a><br>
+                    <a href="#">Cita asistencia tecnica </a><br>
+                    <a href="#">Responsabilidad social </a><br>
+
+
+                </td>
+
+
+                <td>
+
+
+                    <a href="#">Instagram</a><br>
+                    <a href="#">Twitter</a><br>
+                    <a href="#">Facebook</a><br>
+                    <a href="#">Telegram</a><br>
+                    <a href="#">Youtube</a><br>
+                    <a href="#">TikTok</a><br>
+                    <a href="#">Twitch</a>
+                </td>
+            </tr>
+        </table>
     </div>
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 </body>
 
 </html>
