--- a/src/main/resources/templates/html/naruto/index.html
+++ b/src/main/resources/templates/html/naruto/index.html
@@ -3,17 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Inicio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Figuras One Piece</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/tabla.css">
-
-
-
+    <link rel="stylesheet" href="/css/onePiece.css">
+</head>
 
 <body>
-
     <header class="p-3 bg-dark text-white fixed-top ">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -80,30 +78,8 @@
         </div>
     </header>
 
-    <!-- Encabezado de enlaces para ver las figuras-->
-    <div class="container" style="margin-top: 110px;">
-        <div class="row justify-content-center">
-            <div class="col-lg-3 mb-3">
-                <a href="#" class="btn btn-primary btn-lg btn-block">Novedades</a>
-            </div>
-            <div class="col-lg-3 mb-3">
-                <a href="/OnePiece" class="btn btn-success btn-lg btn-block">One Piece</a>
-            </div>
-            <div class="col-lg-3 mb-3">
-                <a href="#" class="btn btn-danger btn-lg btn-block">Naruto</a>
-            </div>
-            <div class="col-lg-3 mb-3">
-                <a href="#" class="btn btn-info btn-lg btn-block">Dragon Ball</a>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- ahora desde aqui empieza la creacion de las figuras -->
-    <!-- Hacer con html y css-->
-
     <div class="container">
-        <div class="card-container">
+        <div class="card-container"  style="margin-top: 110px;">
             <div class="card">
                 <div class="card-header">
                     <h3>Lista de Figuras</h3>
@@ -121,12 +97,12 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr th:each="figura: ${listaFigura}">
-                                <td><img th:src="${figura.url}" alt="imagen"></td>
-                                <td th:text="${figura.nombre}">Nombre</td>
-                                <td th:text="${figura.arco?.nombre}">Arco</td>
-                                <td th:text="${figura.des}">Descripción</td>
-                                <td th:text="${figura.precio}">Precio</td>
+                            <tr th:each="figuraNaruto: ${listaNaruto}">
+                                <td><img th:src="${figuraNaruto.url}" alt="imagen"></td>
+                                <td th:text="${figuraNaruto.nombre}">Nombre</td>
+                                <td th:text="${figuraNaruto.arco?.nombre}">Arco</td>
+                                <td th:text="${figuraNaruto.des}">Descripción</td>
+                                <td th:text="${figuraNaruto.precio}">Precio</td>
                                 <td>
                                     <!--<input class="form-check-input" type="checkbox" id="compra">
                                     
@@ -145,51 +121,6 @@
         </div>
     </div>
 
-
-    <br>
-
-    <div class="container">
-        <div class="card-container">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Novedad de la semana</h3>
-                </div>
-                <div class="card-body">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Imagen</th>
-                                <th>Nombre</th>
-                                <th>Arco</th>
-                                <th>Descripción</th>
-                                <th>Precio</th>
-                                <th>Compra</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="novedad:${novedadFigura}">
-                                <td><img th:src="${novedad.url}" alt="imagen"></td>
-                                <td th:text="${novedad.nombre}">Nombre</td>
-                                <td th:text="${novedad.arco?.nombre}">Arco</td>
-                                <td th:text="${novedad.des}">Descripción</td>
-                                <td th:text="${novedad.precio}">Precio</td>
-                                <td>
-                                    <!--<input class="form-check-input" type="checkbox" id="compra">
-                                    
-                                        <label class="form-check-label" for="compra">Compra</label> -->
-                                    <a href="">
-
-                                        <button type="button" class="boton btn-comprar">Comprar</button>
-                                    </a>
-
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
     <div class="menu">
@@ -272,7 +203,9 @@
         </table>
     </div>
 
-   
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
