--- a/src/main/resources/templates/html/encabezado/acercaEnca.html
+++ b/src/main/resources/templates/html/encabezado/acercaEnca.html
@@ -12,7 +12,7 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 
-                <li> <img src="/Imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
+                <li> <img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
                 <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
                 <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
                 <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
@@ -25,7 +25,7 @@
             </form>
 
             <div class="text-end">
-                <a href="/inicioSesion" class="btn btn-outline-light me-2">Iniciar sesion</a>
+                <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesion</a>
                 <a href="/registrar" class="btn btn-warning">Registrar</a>
 
             </div>
