--- a/src/main/resources/templates/html/encabezado/caracteristicas.html
+++ b/src/main/resources/templates/html/encabezado/caracteristicas.html
@@ -11,7 +11,7 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 
-                <li> <img src="/Imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
+                <li> <img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
                 <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
                 <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
                 <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
@@ -122,8 +122,8 @@
 <p>Precio o valor estimado de la figura, si es aplicable.</p>
 
 <h2>Fotografías:</h2>
-<img src="/Imagen/encabezado/zoro.jpg" alt="Zoro">
-<img src="/Imagen/encabezado/sanks.jpg" alt="Snaks">
+<img src="/imagen/encabezado/zoro.jpg" alt="Zoro">
+<img src="/imagen/encabezado/sanks.jpg" alt="Snaks">
 
 
 <h2>Vídeos de montajes :</h2>
