--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/tabla.css">
+    <link rel="stylesheet" href="/css/pantalla.css">
 
 
 
@@ -27,8 +28,11 @@
                     <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
+
+                            
                             <!--  mirar por que da error-->
-                            <!-- <span th:text="${#authentication.name}">Opciones</span> <span class="caret"></span>-->
+                        <!--  <span th:text="${#authentication.name}">Opciones</span> <span class="caret"></span> -->
+                         <!--<span th:text="${#authentication.name}">Opciones</span>-->
                         </a>
                         <ul class="dropdown-menu">
                             <li><span class="dropdown-item" th:text="' App: ' + ${session.numVisitasApp}"></span></li>
@@ -61,7 +65,7 @@
                         <i class="bi bi-save"></i>
                     </div>
                 </div>
-
+                  
 
                 <div class="text-end">
                     <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesion</a>
@@ -92,7 +96,6 @@
 
     <!-- Encabezado de enlaces para ver las figuras-->
 
-
     <div class="container" style="margin-top: 110px;">
         <div class="row justify-content-center">
             <div class="col-lg-3 mb-3">
@@ -108,6 +111,16 @@
                 <a href="/DragonBall" class="btn btn-info btn-lg btn-block">Dragon Ball</a>
             </div>
         </div>
+
+
+      <!--   prurbe ade carrusel -->
+      <div class="carrusel">
+        <div class="carrusel-slide"><img src="/imagen/fotosLista/brook1.jpg" alt="Slide 1"></div>
+        <div class="carrusel-slide"><img src="/imagen/fotosLista/zoro.jpg" alt="Slide 2"></div>
+        <div class="carrusel-slide"><img src="/imagen/fotosLista/brook1.jpg" alt="Slide 3"></div>
+      </div>
+
+
 
 
     <!-- ahora desde aqui empieza la creacion de las figuras -->
@@ -292,6 +305,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="/js/pantalla.js"></script>
 </body>
 
 </html>
