--- a/src/main/resources/static/css/pantalla.css
+++ b/src/main/resources/static/css/pantalla.css
@@ -1,16 +1,36 @@
+.carrusel-container {
+    position: relative;
+    width: 1300px; /* Ancho del carrusel */
+    height: 300px; /* Alto del carrusel */
+}
+
 .carrusel {
     overflow: hidden;
-    width: 300px;
-    height: 200px;
-  }
-  
-  .carrusel-slide {
+    width: 100%;
+    height: 100%;
+}
+
+.carrusel-slide {
     float: left;
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     display: none;
-  }
-  
-  .carrusel-slide.activar {
+}
+
+.carrusel-slide.activar {
     display: block;
-  }
+}
+
+.flecha-izquierda {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+
+.flecha-derecha {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+}
