--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -31,7 +31,7 @@
 
                             
                             <!--  mirar por que da error-->
-                        <!--  <span th:text="${#authentication.name}">Opciones</span> <span class="caret"></span> -->
+                       <span th:text="${#authentication.username}">Opciones</span> <span class="caret"></span>
                          <!--<span th:text="${#authentication.name}">Opciones</span>-->
                         </a>
                         <ul class="dropdown-menu">
@@ -114,11 +114,18 @@
 
 
       <!--   prurbe ade carrusel -->
-      <div class="carrusel">
-        <div class="carrusel-slide"><img src="/imagen/fotosLista/brook1.jpg" alt="Slide 1"></div>
-        <div class="carrusel-slide"><img src="/imagen/fotosLista/zoro.jpg" alt="Slide 2"></div>
-        <div class="carrusel-slide"><img src="/imagen/fotosLista/brook1.jpg" alt="Slide 3"></div>
-      </div>
+        <div class="carrusel-container">
+            <div class="carrusel">
+                <div class="carrusel-slide">
+                    <a href="/OnePiece">      <img src="/imagen/carrusel/onepiece.jpg" alt="Slide 1">  </a>
+
+                </div>
+                <div class="carrusel-slide"><img src="/imagen/fotosLista/zoro.jpg" alt="Slide 2"></div>
+                <div class="carrusel-slide"><img src="/imagen/fotosLista/brook1.jpg" alt="Slide 3"></div>
+            </div>
+            <button id="prevBtn" class="flecha-izquierda">←</button>
+            <button id="nextBtn" class="flecha-derecha">→</button>
+        </div>
 
 
 
@@ -300,12 +307,12 @@
             </tr>
         </table>
     </div>
-
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="/js/pantalla.js"></script>
-</body>
+ </body>
 
 </html>
