--- a/src/main/resources/templates/html/encabezado/caracteristicas.html
+++ b/src/main/resources/templates/html/encabezado/caracteristicas.html
@@ -3,34 +3,87 @@
     <meta charset="UTF-8">
     <title>Caracteristicas</title>
     <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/caja-boostrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
-<header class="p-3 bg-dark text-white">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+    <header class="p-3 bg-dark text-white fixed-top ">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
+                    <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
+                    <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
+                    <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
+                    <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
+                    <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
 
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
 
-                <li> <img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
-                <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
-                <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
-                <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
-                <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
-            </ul>
 
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control form-control-dark" placeholder="Buscar..." aria-label="Buscar">
-            </form>
+                            <!--  mirar por que da error-->
+                            <!--  <span th:text="${#authentication.username}">Opciones</span> <span class="caret"></span> -->
+                            <!--<span th:text="${#authentication.name}">Opciones</span>-->
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><span class="dropdown-item" th:text="' App: ' + ${session.numVisitasApp}"></span></li>
+                            <li><span class="dropdown-item" th:text="' index: ' + ${session.numVisitasIndex}"></span>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Crear perfil</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a href="/perfil/list" class="nav-link px-2 text-secondary">Lista perfiles</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
-            <div class="text-end">
-                <a href="/inicioSesion" class="btn btn-outline-light me-2">Iniciar sesion</a>
-                <a href="/registrar" class="btn btn-warning">Registrar</a>
+                <div id="toggleSearchForm" class="d-inline-flex align-items-center" style="margin-right: 10px;" >
+                    <i class="bi bi-search"></i>
+                    <form id="searchForm" role="search" method="get"
+                        action="/figuras/filtrar">
+                        <label for="buscarPorNombre" class="form-label" id="Filtro"></label>
+                        <input type="text" class="form-control form-control-dark" id="buscarPorNombre"
+                            placeholder="Buscar..." name="nombre">
+                    </form>
+                </div>
+                <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;">
+                    <i class="bi bi-save"></i>
+                </div>
 
+
+
+                <div class="text-end"  >
+                    <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesion</a>
+                </div>
+                <div class="text-end">
+
+
+                    <a href="/registrar" class="btn btn-warning"> Registrar </a>
+                    <!--    <form id="logoutForm" th:action="@{/usuario/logout}" method="post">
+                    <button type="submit" class="btn btn-warning">
+                        <i class="fas fa-sign-out-alt"></i> Exit
+                    </button>
+                </form>-->
+                </div>
+                <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
+          <div  sec:authorize="hasRole('ROLE_ADMIN')" >
+
+                   <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
+
+
+                   <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
+           </div> -->
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
 <h1>Características de la Figura</h1>
 
@@ -140,5 +193,7 @@
 </div>
 
 <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}" ></script>
+<script src="/js/buscar.js"></script>
+<script src="/js/favoritos.js"></script>
 </body>
 </html>
